--- a/usecase7-Logistic.ipynb
+++ b/usecase7-Logistic.ipynb
@@ -1361,7 +1361,7 @@
    "id": "91ea3c01-7cc3-4eb0-a677-0cb9c1678128",
    "metadata": {},
    "source": [
-    "Prepare train and test data\n"
+    "## Prepare train and test data\n"
    ]
   },
   {
